# lucky-solana

./: Anchor.toml  README.md  new_program_id.json  package.json
programs/lucky-sol/: Cargo.toml
programs/lucky-sol/src/: lib.rs
programs/lucky-sol/src/actions/: create_lottery.rs  mod.rs  purchase_lottery.rs  set_winner.rs
scripts/: add_metadata.ts  buy_ticket.ts  create_lottery.ts  create_mint.ts  get_lotteries.ts  get_lotteries_short.ts  get_tickets.ts  initialize.ts  set_winner.ts  transfer_mint.ts
tests/: lucky-sol.ts  schemas.ts  utils.ts
